--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,26 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.SearchActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".activity.SearchActivity" />
+        <activity android:name=".activity.FilsafatdanPsikologi" />
+        <activity android:name=".activity.Agama" />
+        <activity android:name=".activity.Sosial" />
+        <activity android:name=".activity.Bahasa" />
+        <activity android:name=".activity.SainsdanMatematika" />
+        <activity android:name=".activity.Teknologi" />
+        <activity android:name=".activity.SenidanRekreasi" />
+        <activity android:name=".activity.LiteraturdanSastra" />
+        <activity android:name=".activity.SejarahdanGeografi" />
         <activity android:name=".activity.ViewBookActivity" />
         <activity android:name=".activity.BooksActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
