--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
     implementation 'androidx.room:room-runtime:2.2.6'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.0.6'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     annotationProcessor 'androidx.room:room-compiler:2.2.6'
 
